svasta resio, overflow na 3 stv, navbar fixed

--- a/src/Components/Agenda/Agenda.Module.css
+++ b/src/Components/Agenda/Agenda.Module.css
@@ -10,10 +10,11 @@
 } */
 
 .Agenda-sve {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  
   
 }
 
