--- a/src/Components/OrgTim3/OrgTim3.css
+++ b/src/Components/OrgTim3/OrgTim3.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
     /* background: #1E5D88; */
     /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
 }
